--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,12 @@
         android:theme="@style/NoTitle"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".mmps.MMPS_All_Parts_Check_List"
+            android:exported="false" />
+        <activity
+            android:name=".smt_production.SMT_Production_Working"
+            android:exported="false" />
+        <activity
             android:name=".smt_production.SMT_Production_Start_Check"
             android:exported="false" />
         <activity
